# cargo-pack-docker

./: .travis.yml  CHANGELOG.md  Cargo.toml  Dockerfile  NEWS  README.md  appveyor.yml
ci/: before_deploy.ps1  before_deploy.sh  script.sh
src/: docker.rs  lib.rs  main.rs
