[package]
authors = ["Sunrin SHIMURA (keen) <3han5chou7@gmail.com>"]
name = "cargo-pack-docker"
version = "0.2.0"
description = "pack artifacts into a docker image"
repository = "https://github.com/KeenS/cargo-pack-docker"
license = "MIT/Apache-2.0"
categories = ["development-tools"]
keywords = ["cargo-subcommand", "cargo"]
readme = "README.md"

[dependencies]
cargo = "0.26.0"
clap = "2.20.5"
copy_dir = "0.1.2"
env_logger = "0.5.5"
error-chain = "0.11.0"
handlebars = "0.32.0"
log = "0.4.1"
serde = "1.0"
semver = "0.9.0"
tempdir = "0.3.5"
cargo-pack = "0.3.0"
serde_derive = "1.0.28"
