[package]
authors = ["Sunrin SHIMURA (keen) <3han5chou7@gmail.com>"]
name = "cargo-pack-docker"
version = "0.4.0"
description = "pack artifacts into a docker image"
repository = "https://github.com/KeenS/cargo-pack-docker"
license = "MIT/Apache-2.0"
categories = ["development-tools"]
keywords = ["cargo-subcommand", "cargo"]
readme = "README.md"
edition = "2018"

[dependencies]
cargo = "0.32.0"
clap = "2.20.5"
copy_dir = "0.1.2"
env_logger = "0.6.0"
handlebars = "1.0"
log = "0.4.1"
serde = "1.0"
semver = "0.9.0"
tempdir = "0.3.5"
cargo-pack = "0.5.0"
serde_derive = "1.0.28"
failure = "0.1.1"
failure_derive = "0.1.1"
which = "2.0.0"
