[package]
authors = ["Sunrin SHIMURA (keen) <3han5chou7@gmail.com>"]
name = "cargo-pack-docker"
version = "0.5.0"
description = "pack artifacts into a docker image"
repository = "https://github.com/KeenS/cargo-pack-docker"
license = "MIT/Apache-2.0"
categories = ["development-tools"]
keywords = ["cargo-subcommand", "cargo"]
readme = "README.md"
edition = "2018"

[dependencies]
clap = "2"
copy_dir = "0.1.2"
env_logger = "0.7"
handlebars = "3.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"]}
semver = "0.9.0"
tempdir = "0.3.5"
which = "3.0.0"
cargo-pack = "0.6"
failure = "0.1.1"
